SUBDIRS = src glade desktop themes pixmaps man po

EXTRA_DIST = \
	AUTHORS \
	BUGS \
	COPYING \
	INSTALL \
	NEWS \
	README \
	TODO \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	intltool-extract \
	intltool-merge \
	intltool-update

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update \
	po/stamp-it \
	po/.intltool-merge-cache
